@@ -759,7 +759,7 @@ FIELD		|elementtype	|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|iconid_off	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|iconid_on	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|iconid_unknown	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|label		|t_varchar(128)	|''	|NOT NULL	|ZBX_SYNC
+FIELD		|label		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|label_location	|t_integer	|	|NULL		|ZBX_SYNC
 FIELD		|x		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|y		|t_integer	|'0'	|NOT NULL	|ZBX_SYNC
